force-app/main/default/objects/Assessment_Submission__c/Assessment_Submission__c.object-meta.xml
<CustomObject>
    <description>For NPQ Programmes</description>
    <label>Assessment Submission</label>
    <nameField>
        <label>Assessment Submission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>