force-app/main/default/objects/Assessment_Submission__c/fields/Approved_for_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved for Assessment</label>
    <type>Checkbox</type>
</CustomField>