force-app/main/default/objects/Assessment_Submission__c/fields/Cohort_NPQ_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Cohort_NPQ_Tasks__c</fullName>
    <formula>Participant__r.Programme__r.NPQ_Tasks_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cohort NPQ Tasks No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>