force-app/main/default/objects/Assessment_Submission__c/fields/Last_Resubmission_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Resubmission_Date__c</fullName>
    <label>Last re-submission Date</label>
    <type>Date</type>
</CustomField>