force-app/main/default/objects/Assessment_Submission__c/fields/Marked__c.field-meta.xml
<CustomField>
    <fullName>Marked__c</fullName>
    <formula>!ISBLANK(Marker__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marked</label>
    <type>Checkbox</type>
</CustomField>