force-app/main/default/objects/Assessment_Submission__c/fields/Marker__c.field-meta.xml
<CustomField>
    <fullName>Marker__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Marker for NPQ Assessments</description>
    <label>Marker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assessment Submissions</relationshipLabel>
    <relationshipName>Assessment_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>