force-app/main/default/objects/Assessment_Submission__c/fields/Marker_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Marker_Outcome__c</fullName>
    <inlineHelpText>Overall Outcome for NPQ</inlineHelpText>
    <label>Marker Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>