force-app/main/default/objects/Assessment_Submission__c/fields/Moderator__c.field-meta.xml
<CustomField>
    <fullName>Moderator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Moderator for NPQ</inlineHelpText>
    <label>Moderator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assessment Submissions (Moderator)</relationshipLabel>
    <relationshipName>Moderated_Assessment_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>