force-app/main/default/objects/Assessment_Submission__c/fields/Moderator_Outcome_Task_1__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Outcome_Task_1__c</fullName>
    <inlineHelpText>For NPQs</inlineHelpText>
    <label>Moderator Outcome Task 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>