force-app/main/default/objects/Assessment_Submission__c/fields/Moderator_Score_Task_1__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Score_Task_1__c</fullName>
    <inlineHelpText>Moderated NPQ score</inlineHelpText>
    <label>Moderator Score Task 1</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>