force-app/main/default/objects/Assessment_Submission__c/fields/Moderator_Score_Task_2__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Score_Task_2__c</fullName>
    <inlineHelpText>For NPQs</inlineHelpText>
    <label>Moderator Score Task 2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>