force-app/main/default/objects/Assessment_Submission__c/fields/Outcome_Task_2__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Task_2__c</fullName>
    <inlineHelpText>Outcome for NPQ</inlineHelpText>
    <label>Outcome Task 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>