force-app/main/default/objects/Assessment_Submission__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <label>Participant</label>
    <referenceTo>Programme_Participant__c</referenceTo>
    <relationshipLabel>Assessment Submissions</relationshipLabel>
    <relationshipName>Assessment_Submissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>