force-app/main/default/objects/Assessment_Submission__c/fields/Participant_NPQ_Assess_Sub_Marked__c.field-meta.xml
<CustomField>
    <fullName>Participant_NPQ_Assess_Sub_Marked__c</fullName>
    <formula>Participant__r.NPQ_Assessment_Submissions_Marked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part. NPQ Assess. Sub. Marked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>