force-app/main/default/objects/Assessment_Submission__c/fields/Participant_NPQ_Assessment_Submissions__c.field-meta.xml
<CustomField>
    <fullName>Participant_NPQ_Assessment_Submissions__c</fullName>
    <formula>Participant__r.NPQ_Assessment_Submissions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant NPQ Assessment Submissions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>