force-app/main/default/objects/Assessment_Submission__c/fields/Score_Task_1__c.field-meta.xml
<CustomField>
    <fullName>Score_Task_1__c</fullName>
    <inlineHelpText>Score Task 1 for NPQ</inlineHelpText>
    <label>Score Task 1</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>