force-app/main/default/objects/Assessment_Submission__c/fields/Score_Task_2__c.field-meta.xml
<CustomField>
    <fullName>Score_Task_2__c</fullName>
    <inlineHelpText>Score NPQ Task 2</inlineHelpText>
    <label>Score Task 2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>