force-app/main/default/objects/Assessment_Submission__c/fields/Submitted__c.field-meta.xml
<CustomField>
    <fullName>Submitted__c</fullName>
    <formula>!ISBLANK(Submission_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted</label>
    <type>Checkbox</type>
</CustomField>