force-app/main/default/objects/Assessment_Submission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Final_Outcome__c</columns>
    <columns>Participant_Name__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Approved_for_Assessment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>