force-app/main/default/objects/Assessment_Submission__c/listViews/Current_Submissions.listView-meta.xml
<ListView>
    <fullName>Current_Submissions</fullName>
    <columns>NAME</columns>
    <columns>Final_Outcome__c</columns>
    <columns>Participant_Name__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Approved_for_Assessment__c</columns>
    <columns>Participant__c</columns>
    <columns>Marker__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Submission_Date__c</field>
        <operation>greaterThan</operation>
        <value>11/9/2019</value>
    </filters>
    <label>Current Submissions</label>
</ListView>